# bayesian_router_pro_max

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
examples/: differential.dsn  digistump.dsn  echo.dsn  music.dsn  ping.dsn
parser/: Cargo.toml
parser/src/: dsn_struct.rs  lib.rs  main.rs  parse_end_to_end.rs  parse_to_display.rs  parse_to_display_format.rs  parse_to_pcbproblem.rs  parse_to_s_expr.rs  parse_to_struct.rs  prim_mst.rs  s_expr.rs  write_ses.rs
router/: Cargo.toml
router/src/: astar.rs  astar_check_struct.rs  backtrack_node.rs  bayesian_backtrack_algo.rs  block_or_sleep.rs  command_flags.rs  deterministic_rand.rs  display_injection.rs  lib.rs  naive_backtrack_algo.rs  pcb_problem_solve.rs  post_process.rs  proba_model.rs  quad_tree.rs  test_pcb_problem.rs
self-made-kicad-cases/bjt_led/: test.dsn  test.kicad_pcb  test.kicad_prl  test.kicad_pro  test.kicad_sch
self-made-kicad-cases/differential_amplifier/: differential_amplifier.kicad_pcb  differential_amplifier.kicad_prl  differential_amplifier.kicad_pro  differential_amplifier.kicad_sch
shared/: Cargo.toml
shared/src/: binary_heap_item.rs  collider.rs  color_float3.rs  distinct_color_generator.rs  lib.rs  (+11 more)
src/: app.rs  app_state.rs  command_thread.rs  context.rs  home_page.rs  lib.rs  line_pipeline.rs  main.rs  my_texture.rs  orthographic_camera.rs  pcb_page.rs  render_context.rs  render_model_to_submissions.rs  settings_page.rs  stats_page.rs  transparent_pipeline.rs  working_thread_fn.rs
src-tauri/: Cargo.toml  tauri.conf.json
styles/: output.css
(+8 files in other folders)
