[package]
name = "test_desktop-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_router = "0.8.5"
log = "0.4.27"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features=["all"] }
web-sys = "0.3.77"
futures = "0.3.31"
wgpu = "25.0.2"
bytemuck = "1.23.1"
shared={path="shared"}
cgmath = "0.18.0"
leptos-use = "0.16.2"

[workspace]
members = [ "parser", "router", "shared","src-tauri"]
